--- a/hyperstream/templates/header.html
+++ b/hyperstream/templates/header.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="https://unpkg.com/mvp.css@1.12/mvp.css">
-        
+        <!-- <link rel="stylesheet" href=" {{ stylesheet|default('https://unpkg.com/mvp.css@1.12/mvp.css', true) }} "> -->
+        <link rel="stylesheet" href=" {{ stylesheet }} ">
+
         <script src="https://unpkg.com/htmx.org@1.8.2"></script>
 
         <meta charset="utf-8">
