feat: use morph to merge html on update to hopefully improve consistency

--- a/hstream/templates/header.html
+++ b/hstream/templates/header.html
@@ -5,6 +5,8 @@
         <link rel="stylesheet" href=" {{ stylesheet }} ">
 
         <script src="https://unpkg.com/htmx.org@1.8.2"></script>
+        <script src="https://unpkg.com/idiomorph/dist/idiomorph-ext.min.js"></script>
+
 
         <meta charset="utf-8">
         <meta name="description" content="My description">
