--- a/hstream/templates/header.html
+++ b/hstream/templates/header.html
@@ -6,8 +6,8 @@
 
         <script src="https://unpkg.com/htmx.org@1.8.2"></script>
         <script src="https://unpkg.com/idiomorph/dist/idiomorph-ext.min.js"></script>
-
-
+        <script src="https://unpkg.com/htmx.org/dist/ext/path-deps.js"></script>
+        <script src="https://unpkg.com/hyperscript.org@0.9.7"></script>
         <meta charset="utf-8">
         <meta name="description" content="My description">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
