--- a/hstream/templates/main.html
+++ b/hstream/templates/main.html
@@ -1,15 +1,13 @@
 {% include 'header.html' %}
-<body>  
-  <!-- setting main's id correctly is important because we use this to move the nav bar above <main></main> -->
-  <main
-  id="hs-content"
-  > 
-    <div 
-    hx-get="/content"
-    hx-trigger="load, update_content_event" 
-    hx-swap="morph"
-    >
-    </div> 
+
+<body>
+  <div id='hs-nav'>
+
+  </div>
+  <main>
+    <div hx-get="/content" hx-trigger="load, update_content_event from:body" hx-swap="morph">
+    </div>
   </main>
 </body>
+
 </html>
