--- a/hstream/templates/error_html.html
+++ b/hstream/templates/error_html.html
@@ -1,3 +1,3 @@
-<article class="card pico-background-red-100 pico-color-red-500" style="max-width: 400px; margin: 20px auto; padding: 20px;  border-left: 5px solid #f44336;">
+<article class="card pico-background-red-100 pico-color-red-500" style="margin: 20px auto; padding: 20px;  border-left: 5px solid #f44336;">
   {error}
 </article>
