--- a/hstream/templates/format_html.html
+++ b/hstream/templates/format_html.html
@@ -9,7 +9,8 @@
   <script src="https://unpkg.com/htmx.org/dist/ext/path-deps.js"></script>
   <script src="https://unpkg.com/hyperscript.org@latest"></script>
   <script src="https://unpkg.com/htmx.org/dist/ext/debug.js"></script>
-
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.16.0/cdn/themes/light.css" />
+  <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.16.0/cdn/shoelace-autoloader.js"></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title></title>
