--- a/hstream/templates/format_html.html
+++ b/hstream/templates/format_html.html
@@ -2,13 +2,14 @@
 <html lang="en">
 
 <head>
+  <!-- <script src="https://unpkg.com/idiomorph/dist/idiomorph-ext.min.js"></script> -->
+  <!-- <script src="https://unpkg.com/htmx.org/dist/ext/path-deps.js"></script> -->
+  <!-- <script src="https://unpkg.com/htmx.org/dist/ext/debug.js"></script> -->
+  
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.colors.min.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css" />
   <script src="https://unpkg.com/htmx.org@latest"></script>
-  <script src="https://unpkg.com/idiomorph/dist/idiomorph-ext.min.js"></script>
-  <script src="https://unpkg.com/htmx.org/dist/ext/path-deps.js"></script>
   <script src="https://unpkg.com/hyperscript.org@latest"></script>
-  <script src="https://unpkg.com/htmx.org/dist/ext/debug.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.16.0/cdn/themes/light.css" />
   <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.16.0/cdn/shoelace-autoloader.js"></script>
   <meta charset="UTF-8">
